Refactor RemotePlaysHandler